# face_id

./: CMakeLists.txt  README.md  build.sh  readme.txt  setup.sh  user_db.sh
conf/: face_id.xml
model/: download.txt
src/: codecs.cpp  codecs.h  common.h  conf_mgt.cpp  conf_mgt.h  face_aligner.cpp  face_aligner.h  face_detector.cpp  face_detector.h  face_handler.h  face_handler_mgt.cpp  face_handler_mgt.h  face_recognizer.h  facenet_recognizer.cpp  insightface_recognizer.cpp  main.cpp  msg_oper.cpp  msg_oper.h  mtcnn.cpp  mtcnn.h  mysql_conn.cpp  mysql_conn.h  mysql_mgt.cpp  mysql_mgt.h  protocol.cpp  protocol.h  req_mgt.cpp  req_mgt.h  req_processor.cpp  req_processor.h  req_tcp_event_handler.cpp  req_tcp_event_handler.h  request.cpp  request.h  start_stop_srv.sh  timing.h  user_mgt.cpp  user_mgt.h
src/ncnn/layer/: prelu.cpp
src/test/: cli.cpp  dataset_config.py  evaluate.py  realtime_tester.py  recognize_tester.py  register.py  video_tester.py
src/test/common/: base.py  client.py  com_config.py  connection.py
src/tools/: curve_plot.py  face_crop_tool.cpp  face_get_feature.cpp  freeze_graph.py  remove_noises.py
